// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OcBreadcrumb displays all items 1`] = `
<nav class="oc-breadcrumb oc-breadcrumb-default">
  <ol class="oc-breadcrumb-list">
    <li class="oc-breadcrumb-list-item">
      <router-link-stub tag="a" to="[object Object]">
        First folder
      </router-link-stub>
    </li>
    <li class="oc-breadcrumb-list-item">
      <oc-button-stub type="button" size="medium" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">
        Subfolder
      </oc-button-stub>
    </li>
    <li class="oc-breadcrumb-list-item">
      <router-link-stub tag="a" to="[object Object]">
        Deep
      </router-link-stub>
    </li>
    <li class="oc-breadcrumb-list-item"><span aria-current="page" tabindex="-1">Deeper ellipsize in responsive mode</span></li>
  </ol>
  <div class="oc-breadcrumb-drop"><label tabindex="0" class="oc-breadcrumb-drop-label"><span aria-current="page" class="oc-breadcrumb-drop-label-text">Deeper ellipsize in responsive mode</span>
      <oc-icon-stub name="expand_more" accessiblelabel="Expand more" type="span" size="medium" variation="passive" class="oc-breadcrumb-drop-label-icon"></oc-icon-stub>
    </label>
    <oc-drop-stub dropid="oc-drop-2" toggle="" position="bottom-start" mode="click" options="[object Object]">
      <ol class="uk-nav uk-nav-default">
        <li>
          <router-link-stub tag="a" to="[object Object]">
            Deep
          </router-link-stub>
        </li>
        <li>
          <oc-button-stub type="button" size="medium" variation="passive" appearance="raw" justifycontent="left" gapsize="medium">
            Subfolder
          </oc-button-stub>
        </li>
        <li>
          <router-link-stub tag="a" to="[object Object]">
            First folder
          </router-link-stub>
        </li>
      </ol>
    </oc-drop-stub>
  </div>
</nav>
`;

exports[`OcBreadcrumb sets correct variation 1`] = `
<nav class="oc-breadcrumb oc-breadcrumb-lead">
  <ol class="oc-breadcrumb-list">
    <li class="oc-breadcrumb-list-item">
      <router-link-stub tag="a" to="[object Object]">
        First folder
      </router-link-stub>
    </li>
    <li class="oc-breadcrumb-list-item">
      <oc-button-stub type="button" size="medium" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">
        Subfolder
      </oc-button-stub>
    </li>
    <li class="oc-breadcrumb-list-item">
      <router-link-stub tag="a" to="[object Object]">
        Deep
      </router-link-stub>
    </li>
    <li class="oc-breadcrumb-list-item"><span aria-current="page" tabindex="-1">Deeper ellipsize in responsive mode</span></li>
  </ol>
  <div class="oc-breadcrumb-drop"><label tabindex="0" class="oc-breadcrumb-drop-label"><span aria-current="page" class="oc-breadcrumb-drop-label-text">Deeper ellipsize in responsive mode</span>
      <oc-icon-stub name="expand_more" accessiblelabel="Expand more" type="span" size="medium" variation="passive" class="oc-breadcrumb-drop-label-icon"></oc-icon-stub>
    </label>
    <oc-drop-stub dropid="oc-drop-1" toggle="" position="bottom-start" mode="click" options="[object Object]">
      <ol class="uk-nav uk-nav-default">
        <li>
          <router-link-stub tag="a" to="[object Object]">
            Deep
          </router-link-stub>
        </li>
        <li>
          <oc-button-stub type="button" size="medium" variation="passive" appearance="raw" justifycontent="left" gapsize="medium">
            Subfolder
          </oc-button-stub>
        </li>
        <li>
          <router-link-stub tag="a" to="[object Object]">
            First folder
          </router-link-stub>
        </li>
      </ol>
    </oc-drop-stub>
  </div>
</nav>
`;
